--- a/challenge2/package.json
+++ b/challenge2/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.12.3",
     "cors": "^2.6.0",
-    "express": "^4.12.3",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "mongoose": "^4.0.2"
-  }
+  },
+  "keywords": []
 }
